--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
