--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {},
